# mcp-hunter

./: .gitignore  README.md  TODO.txt  config.py  data_adapter.py  fetcher.py  main.py  mcp_hunter.db  models.py  prowl.py  pyproject.toml  scanner.py
corpus/: ApiClient.py  crawler.py  prowl.py
rules/: mcp-command-injection.yaml
